--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
+  http: ^0.13.3
+  flutter_easyloading: ^3.0.0
 
 dev_dependencies:
   flutter_test:
