--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_svg: ^0.22.0
   http: ^0.13.3
   flutter_easyloading: ^3.0.0
+  rflutter_alert: ^2.0.2
 
 dev_dependencies:
   flutter_test:
